# db/accountModel.js
@@ -40,7 +40,7 @@ const AccountSchema = new Schema({
 AccountSchema.pre("save", async function (next) {
   try{
     const salt = await bcrypt.genSalt(10);
-    const hashedPassword = await bcrypt.hash(this.password);
+    const hashedPassword = await bcrypt.hash(this.password, salt);
     this.password = hashedPassword;
     next();
   }catch(err){
